--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,20 @@
 </head>
 <body>
 
-<%= yield %>
+	<div class="nav">
+		<h1><%= link_to "Gaffer League", root_path %></h1>
+		<ul>
+			<li><%= link_to "Sign Up", new_user_path %></li>
+		</ul>
+	</div>
+
+	<% flash.each do |type, message| %>
+		<div class="alert flash <%= type %>">
+			<%= message %>
+		</div>
+	<% end %>
+	
+	<%= yield %>
 
 </body>
 </html>
