--- a/app/views/team_players/index.html.erb
+++ b/app/views/team_players/index.html.erb
@@ -1,2 +1,7 @@
-<h1>TeamPlayers#index</h1>
-<p>Find me in app/views/team_players/index.html.erb</p>
+<h1 id="teamTitleHeader"><%= @team.title %></h1>
+
+<ul class="team_players">
+	<% @team.team_players.each do |team_player| %>
+	<li><%= team_player.id %></li>
+	<% end %>
+</ul>
