Added Active admin & team player create function

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 		<h1><%= link_to "Gaffer League", root_path %></h1>
 		<ul>
 			<li><%= link_to "Sign Up", new_user_path %></li>
+			<li><%= link_to "View Teams", teams_path %></li>
 		</ul>
 	</div>
 
