--- a/app/views/team_players/index.html.erb
+++ b/app/views/team_players/index.html.erb
@@ -1,8 +1,24 @@
 <h1 id="teamTitleHeader"><%= @team.title %></h1>
 
-<ul class="team_players">
-	<% @team.team_players.each do |team_player| %>
-	<li><%= team_player.id %></li>
+<h3>First team players</h3>
+<ul class="first_team_players">
+	<% @team.team_players.select{ |tp| tp.first_team }.each do |team_player| %>
+		<li id="<%= dom_id(team_player) %>">
+			<%= team_player.id %>
+			<%= link_to "Remove", team_team_player_path(team_player.team, team_player), method: :delete, data: { confirm: "Are you sure?" } %>
+			<%= link_to "Remove from first team", update_first_team_team_team_player_path(team_player.team, team_player), method: :patch %>
+		</li>
+	<% end %>
+</ul>
+
+<h3>Squad players</h3>
+<ul class="squad_players">
+	<% @team.team_players.select{ |tp| !tp.first_team }.each do |team_player| %>
+		<li id="<%= dom_id(team_player) %>">
+			<%= team_player.id %>
+			<%= link_to "Remove", team_team_player_path(team_player.team, team_player), method: :delete, data: { confirm: "Are you sure?" } %>
+			<%= link_to "Add to first team", update_first_team_team_team_player_path(team_player.team, team_player), method: :patch %>
+		</li>
 	<% end %>
 </ul>
 
