--- a/app/views/leagues/edit.html.erb
+++ b/app/views/leagues/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing league</h1>
+<p id="notice"><%= notice %></p>
 
+<span class="main_header"><%= link_to @league.name, league_path(@league) %> >> edit</span>
 <%= render 'form' %>
-
-<%= link_to 'Show', @league %> |
-<%= link_to 'Back', leagues_path %>
