--- a/app/views/team_players/_form.html.erb
+++ b/app/views/team_players/_form.html.erb
@@ -10,7 +10,5 @@
   </div>
 <% end %>
 
-<%= form.label :player_id, "Select player for your squad" %><br>
-<%= form.collection_select(:player_id, Player.where('id NOT IN (SELECT DISTINCT(player_id) FROM team_players)'), :id, :full_name) %>
-
-<%= form.submit %>
+<%= form.collection_select(:player_id, Player.where('id NOT IN (SELECT DISTINCT(player_id) FROM team_players)'), :id, "#{:full_name}") %>
+<%= form.submit "Add player to squad" %>
