--- a/app/views/team_players/new.html.erb
+++ b/app/views/team_players/new.html.erb
@@ -1,5 +1,6 @@
-<h1><%= @team.title %> - Add team player</h1>
-	<%= form_for [@team, @team_player], url: league_team_team_players_path(params[:league_id], @team) do |form| %>
-  		<%= render partial: form %>
-	<% end %>
-<%= link_to 'Back', league_team_team_players_path %>
+<span class="main_header">
+	<%= link_to @team.league.name, league_path(@team.league) %> >> <%= link_to @team.title, league_team_path(@team.league, @team) %> >> Add player to squad
+</span>
+<%= form_for [@team, @team_player], url: league_team_team_players_path(params[:league_id], @team) do |form| %>
+	<%= render partial: form %>
+<% end %>
