--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,6 +1,2 @@
-<h1>Editing team</h1>
-
+<span class="main_header"><%= link_to @team.league.name, league_path(@team.league) %> >> <%= link_to @team.title, league_team_path(@team.league, @team) %> >> edit</span>
 <%= render 'form' %>
-
-<%= link_to 'Show', league_team_path %> |
-<%= link_to 'Back', league_teams_path %>
