--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,9 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<span class="main_header"><%= link_to @team.league.name, league_path(@team.league) %> >> <%= @team.title %> (<%= link_to 'edit', edit_league_team_path(@team.league, @team) %>)</span>
+<span class="main_header">
+	<%= link_to @team.league.name, league_path(@team.league) %> >> <%= @team.title %> (<%= link_to 'edit', edit_league_team_path(@team.league, @team) %>)
+</span>
 
-<div class="container">
-	<% @team.team_players.each do |tp| %>
-		<span class="sub_header"><%= tp.player.full_name %></span>
-	<% end %>
-</div>
+<%= render partial: "shared/team_players" %>
