--- a/app/views/shared/_team_players.html.erb
+++ b/app/views/shared/_team_players.html.erb
@@ -1,24 +1,43 @@
 <div class="container">
 	<span class="sub_header">First team</span>
 	<ul class="first_team_players">
-		<% @team.team_players.select{ |tp| tp.first_team }.each do |team_player| %>
+		<% @team.team_players.includes(:squad_position).find_each do |test| %>
+			<%= "#{test.id} + #{test.squad_position.short_name} + #{test.squad_position.sort_order}" %>
+		<% end %>
+		<% @team.team_players.includes(:squad_position).where(first_team: true).order("squad_positions.sort_order asc").find_each do |team_player| %>
 			<li id="<%= dom_id(team_player) %>">
+				(<%= team_player.squad_position.short_name %>)
 				<%= link_to team_player.player.full_name,
 					league_team_team_player_player_game_weeks_path(team_player.team.league, team_player.team, team_player, team_player.player_id) %>
-				<%= link_to "Remove from first team", update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player), method: :patch %>
+				<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
+					<%= f.hidden_field :position_change_only, :value => false %>
+					<%= f.submit "Remove from first team." %>
+				<% end %>
+				<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
+					<%= f.hidden_field :position_change_only, :value => true %>
+					<%= select(:squad_position, :team_player, options_for_select(SquadPosition.where('short_name NOT LIKE "SUB"').collect{ |sp| [sp.short_name, sp.id]}), :include_blank => 'Choose position...') %>
+					<%= f.submit "Change position" %>
+				<% end %>
 			</li>
 		<% end %>
 	</ul>
 
-	<span class="sub_header">Squad (<%= link_to "add player",
-		new_league_team_team_player_path(@team.league, @team) %>)</span>
+	<span class="sub_header">Squad (<%= link_to "add player", new_league_team_team_player_path(@team.league, @team) %>)</span>
 	<ul class="squad_players">
 		<% @team.team_players.select{ |tp| !tp.first_team }.each do |team_player| %>
 			<li id="<%= dom_id(team_player) %>">
 				<%= link_to team_player.player.full_name,
 					league_team_team_player_player_game_weeks_path(team_player.team.league, team_player.team, team_player, team_player.player_id) %>
-				<%= link_to "Add to first team", update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player), method: :patch %>
-				<%= link_to "Remove from squad", league_team_team_player_path(team_player.team.league, team_player.team, team_player), method: :delete, data: { confirm: "Are you sure?" } %>
+				<%= form_for team_player, url: league_team_team_player_path(team_player.team.league, team_player.team, team_player), method: :delete, data: { confirm: "Are you sure?" }  do |f| %>
+					<%= f.submit "Remove from squad." %>
+				<% end %>
+				<% if @team.team_players.where(:first_team => true).count < 11 %>
+					<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
+						<%= f.hidden_field :position_change_only, :value => false %>
+						<%= select(:squad_position, :team_player, options_for_select(SquadPosition.where('short_name NOT LIKE "SUB"').collect{ |sp| [sp.short_name, sp.id]}), :include_blank => 'Choose position...') %>
+						<%= f.submit "Add to first team" %>
+					<% end %>
+				<% end %>
 			</li>
 		<% end %>
 	</ul>
