--- a/app/views/shared/_team_players.html.erb
+++ b/app/views/shared/_team_players.html.erb
@@ -1,10 +1,7 @@
 <div class="container">
 	<span class="sub_header">First team</span>
 	<ul class="first_team_players">
-		<% @team.team_players.includes(:squad_position).find_each do |test| %>
-			<%= "#{test.id} + #{test.squad_position.short_name} + #{test.squad_position.sort_order}" %>
-		<% end %>
-		<% @team.team_players.includes(:squad_position).where(first_team: true).order("squad_positions.sort_order asc").find_each do |team_player| %>
+		<% @team.team_players.includes(:squad_position, :player).where(first_team: true).reorder('squad_positions.sort_order, players.last_name, players.first_name').each do |team_player| %>
 			<li id="<%= dom_id(team_player) %>">
 				(<%= team_player.squad_position.short_name %>)
 				<%= link_to team_player.player.full_name,
@@ -24,7 +21,7 @@
 
 	<span class="sub_header">Squad (<%= link_to "add player", new_league_team_team_player_path(@team.league, @team) %>)</span>
 	<ul class="squad_players">
-		<% @team.team_players.select{ |tp| !tp.first_team }.each do |team_player| %>
+		<% @team.team_players.where(first_team: false).find_each do |team_player| %>
 			<li id="<%= dom_id(team_player) %>">
 				<%= link_to team_player.player.full_name,
 					league_team_team_player_player_game_weeks_path(team_player.team.league, team_player.team, team_player, team_player.player_id) %>
