--- a/app/views/shared/_team_players.html.erb
+++ b/app/views/shared/_team_players.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
 	<span class="sub_header">First team</span>
 	<ul class="first_team_players">
+		<% squad_position_whtelist = @team.get_squad_position_whitelist %>
 		<% @team.team_players.includes(:squad_position, :player).where(first_team: true).reorder('squad_positions.sort_order, players.last_name, players.first_name').each do |team_player| %>
 			<li id="<%= dom_id(team_player) %>">
 				(<%= team_player.squad_position.short_name %>)
@@ -12,7 +13,7 @@
 				<% end %>
 				<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
 					<%= f.hidden_field :position_change_only, :value => true %>
-					<%= select(:squad_position, :team_player, options_for_select(SquadPosition.where('short_name NOT LIKE "SUB"').collect{ |sp| [sp.short_name, sp.id]}), :include_blank => 'Choose position...') %>
+					<%= select(:squad_position, :team_player, options_for_select(squad_position_whtelist.collect{ |sp| [sp.short_name, sp.id]}), :include_blank => 'Choose position...') %>
 					<%= f.submit "Change position" %>
 				<% end %>
 			</li>
@@ -31,7 +32,7 @@
 				<% if @team.team_players.where(:first_team => true).count < 11 %>
 					<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
 						<%= f.hidden_field :position_change_only, :value => false %>
-						<%= select(:squad_position, :team_player, options_for_select(SquadPosition.where('short_name NOT LIKE "SUB"').collect{ |sp| [sp.short_name, sp.id]}), :include_blank => 'Choose position...') %>
+						<%= select(:squad_position, :team_player, options_for_select(squad_position_whtelist.collect{ |sp| [sp.short_name, sp.id]}), :include_blank => 'Choose position...') %>
 						<%= f.submit "Add to first team" %>
 					<% end %>
 				<% end %>
