--- a/app/views/team_players/_form.html.erb
+++ b/app/views/team_players/_form.html.erb
@@ -10,5 +10,6 @@
   </div>
 <% end %>
 
-<%= form.collection_select(:player_id, Player.where('id NOT IN (SELECT DISTINCT(player_id) FROM team_players)'), :id, "#{:full_name}") %>
+<% @players_in_this_league = Player.joins(team_players: [:team => :league]).where('leagues.id = ?', @team_player.team.league.id) %>
+<%= form.collection_select(:player_id, Player.where.not(id:@players_in_this_league.map(&:id)), :id, "#{:full_name}") %>
 <%= form.submit "Add player to squad" %>
