--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -9,7 +9,7 @@
             <% if team.user_id == @current_user.id %>
               <span><%= link_to team.title, league_team_path(league, team) %></span>
             <% else %>
-              <span><%= "#{team.title} (team.user.full_name)" %></span>
+              <span><%= "#{team.title} (#{team.user.full_name})" %></span>
             <% end %>
           </div>
         </div>
