--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,7 +1,13 @@
 <p id="notice"><%= notice %></p>
-
 <span class="main_header">
 	<%= link_to @team.league.name, league_path(@team.league) %> >> <%= @team.title %> (<%= link_to 'edit', edit_league_team_path(@team.league, @team) %>)
 </span>
-
+<br/>
+<span>
+	<% if current_game_week = GameWeek.get_current_game_week %>
+		Current game week is <%= current_game_week.starts_at.strftime("%a %d-%b-%Y") %> - <%= current_game_week.ends_at.strftime("%a %d-%b-%Y") %>
+	<% else %>
+		No current game week
+	<% end %>
+</span>
 <%= render partial: "shared/team_players" %>
