--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -14,6 +14,16 @@ div.sub_container{
 	padding: 0px 10px;	
 }
 
+div.one_third {
+	float: left;
+	width: 33.33333333333333%;
+}
+
+div.team_player_row{
+	float: left;
+	width: 100%;
+}
+
 span.main_header {
 	font-size: 26px;
 	font-weight: bold;
@@ -22,6 +32,15 @@ span.main_header {
 span.sub_header{
 	display: block;
 	font-size: 20px;
+}
+
+#game_line_ups_div {
+	width: 100%;
+}
+
+.line_up {
+	float: left;
+	width: 50%;
 }
 
 .centered{
