Updating to LeagueSeason model

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <span class="main_header">
-	<%= @league.name %> (<%= link_to 'edit', edit_league_path(@league) %> / <%= link_to 'games', league_games_path(@league) %> / <%= link_to 'transfers', league_transfers_path(@league) %>)
+	<%= @league.name %> (<%= link_to 'games', league_games_path(@league) %> / <%= link_to 'transfers', league_transfers_path(@league) %>)
 </span>
 
 <div>
