--- a/app/views/transfers/show.html.erb
+++ b/app/views/transfers/show.html.erb
@@ -7,7 +7,7 @@
 </span>
 <br/>
 <span>
-	<% if @current_user === @transfer.primary_team.user || @current_user === @transfer.secondary_team.user %>
+	<% if @transfer.current_user_involved?(@current_user) && !@transfer.transfer_completed? %>
 		<%= link_to "Add transfer item", new_league_transfer_transfer_item_path(league, @transfer) %>
 	<% end %>
 </span>
@@ -40,6 +40,8 @@
 	  	<td>
 	  		<% if @transfer.transfer_completed? %>
 	  			Transfer complete
+	  		<% elsif !@transfer.current_user_involved?(@current_user) %>
+	  			Nacho transfer
 	  		<% else %>
 		  		<%= link_to "Remove", league_transfer_transfer_item_path(league, @transfer, transfer_item), method: :delete %>
 		  		or
