Updating fake data tasks and fallout

--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -40,4 +40,13 @@
 	<% if !@league.has_team_owned_by?(@current_user) && @league.teams.count < 20 %>
 		<%= link_to 'Add Team', new_league_team_path(@league) %>
 	<% end %>
+	<% if @league.is_owned_by_this_user?(@current_user) %>
+		<% if @league.teams.count > 0 && @league.teams.count % 2 == 0%>
+			<% Season.current.where(competition: @league.competition).where('id NOT IN (SELECT DISTINCT(season_id) FROM league_seasons)').each do |s| %>
+				<%= button_to "Start #{s.description}", {action: :create, controller: :league_seasons, league_id: @league.id, season_id: s.id}, :method => :post %>
+			<% end %>
+		<% else %>
+			<span>You need an even number of teams to start a league season.</span>
+		<% end %>
+	<% end %>
 </div>
