--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -14,6 +14,12 @@
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
+    <%= f.hidden_field :cash_balance_cents, :value => 2000000000 %>
+    <%= f.fields_for :stadium do |ff| %>
+      <%= ff.label "Stadium name" %>
+      <%= ff.text_field :name %>
+      <%= ff.hidden_field :capacity, :value => 20000 %>
+    <% end %>
   </div>
   <div class="actions">
     <%= f.submit %>
