--- a/app/views/shared/_team_players.html.erb
+++ b/app/views/shared/_team_players.html.erb
@@ -5,15 +5,9 @@
 		<% @team.team_players.includes(:squad_position, :player).where(first_team: true).reorder('squad_positions.sort_order, players.last_name, players.first_name').each do |team_player| %>
 			<li id="<%= dom_id(team_player) %>">
 				(<%= team_player.squad_position.short_name %>)
-				<%= link_to team_player.player.full_name, league_team_team_player_path(team_player.team.league, team_player.team, team_player) %> (<%= number_to_currency(team_player.current_contract.weekly_salary_cents / 100) %>)
+				<%= link_to team_player.full_name, league_team_team_player_path(team_player.team.league, team_player.team, team_player) %> (<%= number_to_currency(team_player.current_contract.weekly_salary_cents / 100) %>)
 				<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
-					<%= f.hidden_field :position_change_only, :value => false %>
 					<%= f.submit "Remove from first team." %>
-				<% end %>
-				<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
-					<%= f.hidden_field :position_change_only, :value => true %>
-					<%= select(:squad_position, :team_player, options_for_select(squad_position_whtelist.collect{ |sp| [sp.short_name, sp.id]}), :include_blank => 'Choose position...') %>
-					<%= f.submit "Change position" %>
 				<% end %>
 			</li>
 		<% end %>
@@ -24,14 +18,13 @@
 		<% @team.team_players.where(first_team: false).find_each do |team_player| %>
 			<li id="<%= dom_id(team_player) %>">
 				<%= link_to team_player.player.full_name, league_team_team_player_path(team_player.team.league, team_player.team, team_player) %> (<%= number_to_currency(team_player.current_contract.weekly_salary_cents / 100) %>)
-				<%= form_for team_player, url: league_team_team_player_path(team_player.team.league, team_player.team, team_player), method: :delete, data: { confirm: "Are you sure?" }  do |f| %>
-					<%= f.submit "Remove from squad." %>
-				<% end %>
-				<% if @team.team_players.where(:first_team => true).count < 11 %>
-					<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
-						<%= f.hidden_field :position_change_only, :value => false %>
-						<%= select(:squad_position, :team_player, options_for_select(squad_position_whtelist.collect{ |sp| [sp.short_name, sp.id]}), :include_blank => 'Choose position...') %>
-						<%= f.submit "Add to first team" %>
+				<% first_team_players = @team.team_players.where(first_team: true) %>
+				<% if first_team_players.count < 11 %>
+					<% if team_player.player.playing_position != 'Goalkeeper' || first_team_players.joins(:squad_position).where('squad_positions.short_name = ?', 'GK').count === 0 %>
+						<%= form_for team_player, url: update_first_team_league_team_team_player_path(team_player.team.league, team_player.team, team_player)  do |f| %>
+							<%= f.hidden_field :squad_position_id, value: team_player.get_squad_position_from_players_playing_position.id %>
+							<%= f.submit "Add to first team" %>
+						<% end %>
 					<% end %>
 				<% end %>
 			</li>
