--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -19,6 +19,11 @@ div.one_third {
 	width: 33.33333333333333%;
 }
 
+div.one_quarter {
+	float: left;
+	width: 25%;
+}
+
 div.one_fifth {
 	float: left;
 	width: 20%;
