--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <span class="main_header">
 	<%= link_to @team.league.name, league_path(@team.league) %> >> <%= @team.title %> (<%= link_to 'edit', edit_league_team_path(@team.league, @team) %>)
 </span>
@@ -11,5 +10,5 @@
 	<% end %>
 </span>
 <br/>
-<span><%= number_to_currency(@team.cash_balance_cents / 100) %></span>
+<span><%= number_to_currency(@team.cash_balance_cents / 100, precision: 0) %></span>
 <%= render partial: "shared/team_players" %>
