--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Reset Your Password</h1>
 <%= form_tag password_resets_path do %>
 	<%= label_tag :email, "Email" %>
-	<%= text_field_tag :email %>
+	<%= text_field_tag :email, nil, id: 'forgot_password_email' %>
 	<br/>
 	<%= submit_tag "Reset Password" %>
 <% end %>
