--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,11 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, id: 'signup_email' %>
   </div>
   <div class="field">
     <%= f.label :password %><br>
-    <%= f.password_field :password %>
+    <%= f.password_field :password, id: 'signup_password' %>
   </div>
   <div class="field">
     <%= f.label :password_confirmation, "Password (again)" %><br>
