Styling the password reset page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,2 +1,11 @@
+.bottom-margin-50 {
+	margin-bottom: 50px;
+}
+.demo-card-wide.mdl-card {
+  width: 600px;
+}
+.logo-icon {
+	width: 107px;
+}
 @import "bootstrap-sprockets";
 @import "bootstrap";
