--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -8,7 +8,7 @@
 		    Enter the email address that you signed up with.
 		  </div>
 		  <div class="mdl-card__actions">
-		    <%= form_tag password_resets_path, class: 'form-inline' do %>
+		    <%= form_tag password_resets_path, class: 'form' do %>
 				<div class="form-group">
 					<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 						<%= text_field_tag :email, nil, id: 'forgot_password_email', class: "mdl-textfield__input" %>
@@ -16,7 +16,7 @@
 					</div>
 				</div>
 				<div class="form-group">
-					<%= submit_tag "Reset password", class: "mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" %>
+					<%= submit_tag "Reset password", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
 				</div>
 			<% end %>
 		  </div>
